# AINewsApp

./: .gitignore  README.md  app.py  main.py  pyproject.toml
config/: ui_config.ini
modules/frontend/: display_results.py  loadui.py  readconfig.py
modules/genai/: groqllm.py
modules/graph/: graph_builder.py
modules/nodes/: ai_news.py
modules/state/: state.py
notebooks/: quicktest.ipynb
