[project]
name = "ainewsapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.11.0",
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-core>=0.3.66",
    "langchain-groq>=0.3.4",
    "langchain-openai>=0.3.25",
    "langgraph>=0.4.8",
    "python-dotenv>=1.1.1",
    "streamlit>=1.46.0",
    "tavily-python>=0.7.8",
]
